app/assets/stylesheets/frontend/helpers/_document_list.scss
.document-list {
  width: 100%;
  clear: both;
  margin-top: $gutter-half;

  .document-row {
    border-bottom: 1px solid $light-warm-grey;
    overflow: hidden;
    position: relative;
    list-style: none;
    text-align: left;

    th {
      @include core-19;
      float: left;
      display: inline;
      width: 100%;
      margin-top: $gutter-one-sixth;
      @media (min-width: 860px) {
        @include core-24;
      }
      padding-bottom: 0;
    }
    
    td {
      @include core-14;
      float: left;
      display: inline;
      padding-top: $gutter-one-sixth;
      padding-left: $gutter-half;
      padding-right: $gutter-half;
      margin-bottom: $gutter-one-sixth;
      &.organisations {
        padding-left: 0;
      }
    }
  }
  
  .document-row:first-child {
    th {
      @include core-27;
      padding-bottom: 0;
    }
  } 
  .document-row:nth-child(2) {
    th {
      @include core-24;
      padding-bottom: 0;
    }
  }


}

